Bug 919797 - Help contrast by making new messages appear 'blue' instead of the link text color. r=richard.marti

--- a/mail/themes/windows/mail/folderPane.css
+++ b/mail/themes/windows/mail/folderPane.css
@@ -222,7 +222,7 @@ treechildren::-moz-tree-image(folderNameCol, isServer-true, serverType-rss) {
 treechildren::-moz-tree-cell-text(folderNameCol, biffState-NewMail, isServer-true),
 treechildren::-moz-tree-cell-text(folderNameCol, newMessages-true),
 treechildren::-moz-tree-cell-text(folderNameCol, specialFolder-Inbox, newMessages-true) {
-  color: -moz-hyperlinktext;
+  color: blue;
 }
 
 treechildren::-moz-tree-cell-text(folderNameCol, biffState-NewMail, isServer-true, selected),
